Mobile layout bugs solved

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -161,12 +161,17 @@ body{
         justify-content: center;
         align-items: center;
 
+        padding-left: 0px;
+
         gap: 20px;
         width: 90%;
         height: 180px;
     }
 
     .section h1{
+        width: 100%;
+
+        line-height: 1;
         font-weight: 700;
         font-size: 22px;
         text-align: center;
@@ -190,6 +195,9 @@ body{
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        padding-bottom: 0px;
+        padding-left: 0px;
 
         gap: 20px;
     }
